# c0-compiler

./: LICENSE  README.md  compiler.cabal
src/: AST.hs  CodeGen.hs  IR.hs  Lexer.x  MIPSGenerator.hs  Main.hs  Parser.y
tests/: input.c0
