
name:                compiler
version:             0.1.0.0
synopsis:            C0 Compiler
description:         Simple C0 Compiler
author:              Carla Henriques and Rui Santos
maintainer:          carlahnr0@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable compiler
  main-is:             Main.hs
  other-modules:       Lexer, Parser, AST, CodeGen , IR, MIPSGenerator
  build-tools:         alex, happy
  build-depends:       base, array , containers , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
